Add check answers domain

--- a/skillsquestions-service/neo4j.properties
+++ b/skillsquestions-service/neo4j.properties
@@ -1,5 +1,5 @@
-#org.neo4j.server.database.mode=HA
-#ha.server_id=1
+org.neo4j.server.database.mode=HA
+ha.server_id=1
 #ha.server.address=localhost
-#ha.server.port=5001
-#ha.initial_hosts=localhost:5001
+ha.server.port=5001
+ha.initial_hosts=localhost:5001
