--- a/skillsTests/pom.xml
+++ b/skillsTests/pom.xml
@@ -6,11 +6,11 @@
   <packaging>pom</packaging>
   <name>SkillsTest</name>
   <modules>
-  	<module>../configuration-service</module>
-  	<module>../eureka-service</module>
-  	<module>../skillsquestions-domain</module>
-  	<module>../skillsquestions-service</module>
-  	<module>../checkanswers-domain</module>
-  	<module>../checkanswers-service</module>
+  	<module>./configuration-service</module>
+  	<module>./eureka-service</module>
+  	<module>./skillsquestions-domain</module>
+  	<module>./skillsquestions-service</module>
+  	<module>./checkanswers-domain</module>
+  	<module>./checkanswers-service</module>
   </modules>
 </project>
