add ui for getting questions and make some adjustments

--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
   	<module>./skillsquestions-service</module>
   	<module>./checkanswers-domain</module>
   	<module>./checkanswers-service</module>
+  	<module>./skillsquestions-ui</module>
   </modules>
 </project>
